# ball-fall

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/apack/: CMakeLists.txt  file_ops.cpp  file_ops.hpp  generator.cpp  generator.hpp  main.cpp  packers.cpp  packers.hpp
src/apack/serialization/: header_writer.cpp  header_writer.hpp  resource_serialization.cpp  resource_serialization.hpp
src/apack/writers/: header_writer.cpp  header_writer.hpp  resource_writer.cpp  resource_writer.hpp
src/ball-fall/: CMakeLists.txt  client.cpp  client.hpp  color.cpp  color.hpp  config.hpp  core.cpp  core.hpp  evening.hpp  events.cpp  events.hpp  field.cpp  field.hpp  lru_cache.hpp  main.cpp  resources.cpp  resources.hpp  sdl_context.cpp  sdl_context.hpp  timer.cpp  vector.hpp  widget.hpp  widgets.cpp  widgets.hpp
src/ball-fall/client/: CMakeLists.txt  game_state.hpp  main_menu.cpp  media.cpp  media.hpp  player_client.cpp  player_client.hpp  player_client_impl.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  sdl_context.cpp  widget.hpp
src/ball-fall/client/game_states/: CMakeLists.txt  game_state.hpp  gameplay.cpp  gameplay.hpp  main_menu.cpp  main_menu.hpp  scene.cpp  scene.hpp
src/ball-fall/client/game_states/widgets/: CMakeLists.txt  button.cpp  button.hpp  panel.cpp  panel.hpp  solid_background.cpp  solid_background.hpp  widget.hpp
src/ball-fall/client/include/client/: client.hpp  player_client.hpp
src/ball-fall/client/widgets/: all.hpp  button.cpp  button.hpp  main_menu.cpp  main_menu.hpp  panel.cpp  panel.hpp  solid_background.cpp  solid_background.hpp
src/ball-fall/config/: CMakeLists.txt
src/ball-fall/core/: CMakeLists.txt  core.hpp  core_impl.cpp  core_impl.hpp  field.cpp
src/ball-fall/core/include/: core.hpp
src/ball-fall/geometry/: 2dspace.cpp  CMakeLists.txt  collisions.cpp  collisions.hpp  geometry.cpp  geometry.hpp
src/ball-fall/geometry/include/geometry/: 2dspace.hpp  collisions.hpp  geometry.hpp
src/ball-fall/platform/: CMakeLists.txt  color.cpp  events.cpp  lru_cache.hpp  platform.cpp  resources.cpp  resources.hpp  resources_impl.cpp  resources_impl.hpp  screen.cpp  screen_impl.cpp  screen_impl.hpp  types.cpp  visuals.cpp
src/ball-fall/platform/include/: platform.hpp
src/ball-fall/platform/include/platform/: config.hpp  events.hpp  resources.hpp  screen.hpp  types.hpp  visuals.hpp
src/ball-fall/platform/include/platform/internal/: apply.hpp  lru_cache.hpp
src/ball-fall/sdl_wrapper/: CMakeLists.txt  font_impl.cpp  font_impl.hpp  renderer_impl.cpp  renderer_impl.hpp  sdl_image_library_impl.cpp  sdl_image_library_impl.hpp  sdl_library_impl.cpp  sdl_library_impl.hpp  sdl_ttf_library_impl.cpp  sdl_ttf_library_impl.hpp  sdl_wrapper.cpp  surface_impl.cpp  surface_impl.hpp  texture_impl.cpp  texture_impl.hpp  window_impl.cpp  window_impl.hpp
src/ball-fall/sdl_wrapper/include/: sdl_wrapper.hpp
src/ball-fall/sdl_wrapper/include/sdl_wrapper/: events.hpp  font.hpp  gfx.hpp  image.hpp  render.hpp  renderer.hpp  sdl.hpp  sdl_image_library.hpp  sdl_library.hpp  sdl_ttf_library.hpp  surface.hpp  texture.hpp  ttf.hpp  video.hpp  window.hpp
src/ball-fall/sdl_wrapper/include/sdl_wrapper/gfx/: gfx_primitives.hpp
src/ball-fall/sdl_wrapper/include/sdl_wrapper/internal/: wrapper.hpp
src/ball-fall/test/: CMakeLists.txt  lru_cache_test.cpp
src/ball-fall/util/: CMakeLists.txt  timer.cpp
src/ball-fall/util/include/util/: vector.hpp
src/ball-fall/widgets/: all.hpp  button.cpp  button.hpp  holder.cpp  holder.hpp  layouts.cpp  main_menu.cpp  main_menu.hpp  panel.cpp  panel.hpp  solid_background.cpp  solid_background.hpp
src/flat/: CMakeLists.txt  resources.fbs
src/repal/: CMakeLists.txt  repal.cpp
src/util/: CMakeLists.txt  util.cpp
src/util/include/: util.hpp
